--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-webcam": "^7.2.0",
+    "tesseract.js": "^5.1.1",
     "tesseract.ts": "^1.1.2"
   },
   "devDependencies": {
